# Spline

./: .gitmodules  BSplineCurveFitterWindow3.cpp  README.md  conanfile.py
include/: BSplineCurveFitterWindow3.h
include/Applications/: Application.cpp  Application.h  CameraRig.cpp  CameraRig.h  Command.cpp  Command.h  Console.h  ConsoleApplication.cpp  ConsoleApplication.h  Environment.cpp  Environment.h  GTApplications.cpp  GTApplications.h  GTApplicationsPCH.h  LogReporter.cpp  LogReporter.h  OnIdleTimer.cpp  OnIdleTimer.h  Timer.cpp  Timer.h  TrackBall.cpp  TrackBall.h  TrackCylinder.cpp  TrackCylinder.h  TrackObject.cpp  TrackObject.h  WICFileIO.h  Window2.cpp  Window2.h  Window3.cpp  Window3.h  WindowApplication.cpp  WindowApplication.h
include/Applications/GLX/: Console.cpp  Console.h  ConsoleSystem.cpp  ConsoleSystem.h  WICFileIO.cpp  WICFileIO.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
include/Applications/MSW/: Console.cpp  Console.h  ConsoleSystem.cpp  ConsoleSystem.h  LogToMessageBox.cpp  LogToMessageBox.h  LogToOutputWindow.cpp  LogToOutputWindow.h  WICFileIO.cpp  WICFileIO.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
include/Mathematics/: README.txt
src/: BSplineCurveFitterWindow3.cpp  CMakeLists.txt
